Version 1.12.2+dev:
 * Language and i18n:
   * Updated translations:
 * Miscellaneous and bug fixes:
   * Fixed bug #23445: set default build type in cmake to "Release" to ensure
     that the game is not unoptimized

Version 1.12.2:
 * Security fixes:
   * Fixed arbitrary file read by WML/Lua API (CVE-2015-0844, bug #23440).
 * AI:
   * Bottleneck Micro AI: bug fix for case when allied units are present
   * Forest Animals Micro AI: bug fix for wander terrain lying on border hexes
   * Herding Micro AI: bug fix for dogs sometimes having moves left at end
 * Campaigns:
   * Use the new bigmaps for A Tale of Two Brothers, Delfadors Memoirs, The
     Hammer of Thursagan, Northern Rebirth and the epilogue of Legend of
     Wesmere.
   * Under the Burning Suns:
     * Subterranean Struggle: fixed enemy reinforcements event never triggering.
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Chinese (Traditional),
     Galician, German, Polish, Scottish Gaelic, Spanish
 * User interface:
   * Fix bug #22984: Sliders (GUI1) focusing improperly in non-game contexts,
    and not responding to left-right key press
 * Miscellaneous and bug fixes:
   * Fix OOS when undoing after deactivating delayed shroud updates.
   * Eliminate local carryover info retained by clients when transitioning in MP
     campaigns, which seems to cause OOS and wrong carryover gold (bug #22936).
   * Fix bug #23426: Terrain Description action works on shrouded hexes.
   * Fix bug #23243: Segfault while clicking during [delay] in prestart.
   * Fix bug #23331: "time over" events unsynced.
   * wmllint now reports 1.10.x-style instances of variation_name (bug #23217).

Version 1.12.1:
 * AI:
   * Big Animals Micro AI: bug fix for units not attacking when [avoid_unit] is
     not set
   * Lurkers MAI: bug fix for attack error when lurker runs into ambush
   * Lurkers MAI: bug fix for attempting to attack petrified units